--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ form{
   height: 25px;
   border:none;
   outline-style:none;
-  border-bottom: 1px solid #19B3D3;
+  border-bottom: 1px solid #1992d3;
   background-color: #ececec;
 }
 .divInfos2{
@@ -251,7 +251,7 @@ form{
   margin-right: 2%;
   margin-left: 2%;
   outline-style:none;
-  border-bottom: 1px solid #19B3D3;
+  border-bottom: 1px solid #1992d3;
   background-color: #ececec;
 }
 .divInfos2 input[type="mail"]{
@@ -262,7 +262,7 @@ form{
   float: right;
   border:none;
   outline-style:none;
-  border-bottom: 1px solid #19B3D3;
+  border-bottom: 1px solid #1992d3;
   background-color: #ececec;
 }
 
@@ -273,7 +273,7 @@ form{
   margin-left: 2%;
   border:none;
   outline-style:none;
-  border-bottom: 1px solid #19B3D3;
+  border-bottom: 1px solid #1992d3;
   background-color: #ececec;
 }
 .divInfos2 input[type="number"]{
@@ -283,7 +283,7 @@ form{
   margin-left: 2%;
   border:none;
   outline-style:none;
-  border-bottom: 1px solid #19B3D3;
+  border-bottom: 1px solid #1992d3;
   background-color: #ececec;
 }
 
@@ -294,7 +294,7 @@ form{
   margin-left: 2%;
   border:none;
   outline-style:none;
-  border-bottom: 1px solid #19B3D3;
+  border-bottom: 1px solid #1992d3;
   background-color: #ececec;
 }
 .divInfos2 select{
@@ -304,7 +304,7 @@ form{
   margin-left: 2%;
   border:none;
   outline-style:none;
-  border-bottom: 1px solid #19B3D3;
+  border-bottom: 1px solid #1992d3;
   background-color: #ececec;
 }
 .divInfos3{
@@ -315,7 +315,7 @@ form{
 }
 .divInfos3 input[type="submit"]{
   margin-right: 7%;
-  background-color: #19B3D3;
+  background-color: #1992d3;
   color: white;
   border-radius: 5px;
   border: none;
